# pico-vl53l5cx-pio

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  Makefile  i2c.pio  pio_i2c.c  pio_i2c.h  platform.c  platform.h
examples/ex10_motion_indicator/: CMakeLists.txt  ex10_motion_indicator.c
examples/ex11_motion_indicator_with_detection_thresholds/: CMakeLists.txt  ex11_motion_indicator_with_detection_thresholds.c
examples/ex1_ranging_basic/: CMakeLists.txt  debug_uart.c  debug_uart.h  debug_uart.pio.h  ex1_ranging_basic.c
examples/ex2_get_set_params/: CMakeLists.txt  ex2_get_set_params.c
examples/ex3_ranging_modes/: CMakeLists.txt  ex3_ranging_modes.c
examples/ex4_power_modes/: CMakeLists.txt  ex4_power_modes.c
examples/ex5_multiple_targets_per_zone/: CMakeLists.txt  ex5_multiple_targets_per_zone.c
examples/ex6_I2C_and_RAM_optimizaton/: CMakeLists.txt  ex6_I2C_and_RAM_optimizaton.c
examples/ex7_calibrate_xtalk/: CMakeLists.txt  ex7_calibrate_xtalk.c
examples/ex8_visualize_xtalk_data/: CMakeLists.txt  ex8_visualize_xtalk_data.c
examples/ex9_detection_thresholds/: CMakeLists.txt  ex9_detection_thresholds.c
