#Set the mimum required version of CMake
cmake_minimum_required(VERSION 3.12)

set(PICO_BOARD pico2_w)

#Pull in SDK (must be before project)
#include(pico_sdk_import.cmake)

# Pull in SDK (must be before project)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

#Set the project name, the programming language
project(pico-vl53l5cx C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

#Initialize the SDK
pico_sdk_init()

add_subdirectory("api")
add_subdirectory("examples")
